<resources>
    <string name="app_name">MSMS</string>
    <string name="app_name_full">Media Streaming Management Service</string>
    <string name="title_activity_movies">MSMS: Movies</string>
    <string name="title_activity_users">MSMS: Users</string>
    <string name="title_activity_movie_info">MSMS: Movie Info</string>
    <string name="title_activity_user_info">MSMS: User Info</string>
    <string name="title_movies">Movies</string>
    <string name="title_users">Users</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="add_movie">Add Movie</string>
    <string name="movie_name">Name:</string>
    <string name="movie_category">Category:</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="movie_category2">Category 2:</string>
    <string name="movie_category3">Category 3:</string>
    <string name="movie_license">License Expiration Date (M/D/Y):</string>
    <string name="movie_release">Release Year:</string>
    <string name="movie_score">Average Score:</string>
    <string name="movie_description">Description:</string>
    <string name="movie_description_hint">What is the movie about?</string>
    <string name="movie_release_hint">YYYY</string>
    <string name="movie_search_hint">Search Movies</string>
    <string name="user_userid">User ID:</string>
    <string name="user_name">Name:</string>
    <string name="user_password">Password:</string>
    <string name="user_age">Age:</string>
    <string name="user_gender">Gender:</string>
    <string name="user_subend">Subscription End Date:</string>
    <string name="change_date">Change Date</string>
    <string name="reports">Reports</string>
    <string name="movie_id">Movie ID:</string>
    <string name="movie_id_hint">Unique integer</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_none">Unsorted</string>
    <string name="user_data">View User Data</string>
    <string name="movie_data">View Movie Data</string>
    <string name="history">History:</string>
    <string name="history_list">History List</string>
    <string name="reports_list">Reports:</string>
</resources>
