<?xml version="1.0" encoding="utf-8"?>
<!--- This SearchView setup code was taken from
http://www.viralandroid.com/2016/03/implementing-searchview-in-android-actionbar.html -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_view"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/option_unsorted"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/sort_none"/>
    <item
        android:id="@+id/option_ascending"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/sort_ascending"/>
    <item
        android:id="@+id/option_descending"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/sort_descending"/>
</menu>